--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@ window.baserowCache = {
   topic: null,
 }
 
+window.markdownRenderer = new showdown.Converter()
+
 window.onload = async () => {
-  console.log("application is booting")
+  console.log("--- application is booting ---")
   await fetchEverythingFromBaserow()
+  console.log("--- baserow fetch successful; rendering ---")
   renderMarkup()
-  enhanceMarkup()
 }
 
 const renderMarkup = () => {
-  // document.querySelector("#interviews").innerHTML = renderInterview(baserowCache.interview.results[0])
   document.querySelector("#nav").innerHTML = renderNav(baserowCache.interview.results, baserowCache.topic.results)
 }
 
@@ -55,9 +56,6 @@ const updateTopic = (id) => {
 
 const openMenu = () => {
   document.querySelector("#nav").classList.remove("hidden-nav");
-}
-
-const enhanceMarkup = () => {
 }
 
 const fetchEverythingFromBaserow = async () => {
@@ -100,53 +98,45 @@ const onExcerptClick = (event) => {
 
 
 const renderTopicExcerpt = (excerpt) => {
-  var converter = new showdown.Converter()
   const id = excerpt["id"]
   const interviewId = excerpt["Interview"][0]["id"]
   const interviewName = excerpt["Interview"][0]["value"]
-  const content = excerpt["Content"]
+  const content = markdownRenderer.makeHtml(excerpt["Content"])
   const time = excerpt["Start Time"]
   const resource = excerpt["Resources"]
   const timeMs = time * 1000
   const timeReadable = new Date(timeMs).toISOString().substring(11, 19)
-  let topics = ""
-  excerpt["Topic"].forEach((topic) => {
-    topics = topics + `<a href="#"><div class="topic-btn">${topic.value}</div></a>`
-  })
   const excerptTemplate = `
   <div onclick="updateInterviewView(${interviewId - 1})">
     <h3>${interviewName}</h3>
-    <div class="content">${converter.makeHtml(content)}</div>
+    <div class="content">${content}</div>
   </div>
   `
   return excerptTemplate;
 }
 
 const renderExcerpt = (excerpt) => {
-  var converter = new showdown.Converter()
   const id = excerpt["id"]
   const interviewId = excerpt["Interview"][0]["id"]
-  const content = excerpt["Content"]
+  const content = markdownRenderer.makeHtml(excerpt["Content"])
   const time = excerpt["Start Time"]
   const resource = excerpt["Resources"]
+  const resourceMarkup = resource ? markdownRenderer.makeHtml(resource)  : ''
   const timeMs = time * 1000
   const timeReadable = new Date(timeMs).toISOString().substring(11, 19)
-  let topics = ""
-  excerpt["Topic"].forEach((topic) => {
-    topics = topics + `<a href="#"><div class="topic-btn">${topic.value}</div></a>`
-  })
+  const topics = excerpt["Topic"].map(t => `<a href="#"><div class="topic-btn">${t.value}</div></a>`).join('\n')
   const excerptTemplate = `
   <tr class="excerpt" data-id="${id}" data-time-ms="${timeMs}" data-interview-id="${interviewId}" onclick="onExcerptClick(event)">
     <td class="time">${timeReadable}</td>
-    <td class="content">${converter.makeHtml(content)}</td>
-    <td class="meta"><div>${topics}</div><div class="resources-block">${converter.makeHtml(resource)}</div></td>
+    <td class="content">${content}</td>
+    <td class="meta"><div>${topics}</div><div class="resources-block">${resourceMarkup}</div></td>
   </tr>
   `
   return excerptTemplate;
 }
 
 const excerptElementsForInterview = (id) => {
-  return document.querySelectorAll("[data-interview-id='1']") 
+  return document.querySelectorAll(`[data-interview-id='${id}']`) 
 }
 
 const onAudioPlayed = (event) => {
@@ -160,22 +150,16 @@ const onAudioSeeked = (event) => {
 }
 
 const renderNav = (interviews, topics) => {
-  let interviewList = ""
-  let topicList = ""
-  interviews.forEach((interview) => {
+  const interviewList = interviews.map(interview => {
     const id = interview["id"]
     const name = interview["Name"]
-    if (name.length > 1) {
-      interviewList = interviewList + `<button onclick="updateInterviewView(${id - 1})"><div>${name}</div></button>`
-    }
-  })
-  topics.forEach((topic) => {
+    return `<button onclick="updateInterviewView(${id - 1})"><div>${name}</div></button>`
+  }).join('\n')
+  const topicList = topics.map(topic => {
     const id = topic["id"]
     const name = topic["Name"]
-    if (name.length > 1) {
-      topicList = topicList + `<button onclick="updateTopic(${id - 1})"><div>${name}</div></button>`
-    }
-  })
+    return `<button onclick="updateTopic(${id - 1})"><div>${name}</div></button>`
+  }).join('\n')
   const navTemplate = `
   <div id="nav-container">
     <div class="nav-left">
@@ -184,7 +168,7 @@ const renderNav = (interviews, topics) => {
       <div class="list-container">
     ${interviewList}
     </div>
-    <h2>Nodes</h2>
+    <h2>Topics</h2>
     <div class="list-container">
     ${topicList}
     </div>
@@ -221,11 +205,8 @@ const renderInterview = (interview) => {
   const title = interview["Title"]
   const subtitle = interview["Subtitle"]
   const audioUrl = interview["Audio File"][0]["url"]
-  let image = ""
-  if (interview["Image"].length > 0) {
-    const profileImageUrl = interview["Image"][0]["url"]
-    image =  `<img src="${profileImageUrl}" />`
-  }
+  const imageUrl = interview["Image"][0] ? interview["Image"][0]["url"] : null
+  const imageMarkup = imageUrl ? `<img src='${imageUrl}' />` : ''
   const excerpts = excerptsForInterview(interview)
   const excerptMarkup = excerpts.map(e => renderExcerpt(e)).join("\n")
   console.log("preparing to render interview, relevant data:", audioUrl, excerpts, excerptMarkup)
@@ -246,7 +227,7 @@ const renderInterview = (interview) => {
     <div class="name-section">
     <h3>${name}</h3>
     </div>
-    ${image}
+    ${imageMarkup}
     <audio id="audio-${id}" controls="" preload="auto" onplay="onAudioPlayed(event)" onseeked="onAudioSeeked(event)" data-interview-id="${id}">
     <source src="${audioUrl}" type="audio/mp3" />
   </audio>
