Minor code cleanup

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 <script src="js/showdown.min.js"></script>
+<!-- NOTE: i assume jQuery is only here for debugging purposes? Doesn't look like it's used anywhere in the code. -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 <script>
@@ -66,7 +67,9 @@ const openMenu = () => {
 
 const fetchEverythingFromBaserow = async () => {
   const { interview, excerpt, topic } = globals.baserow.tableIds
-  // NOTE: this was written under the assumption that there aren't enough rows in these tables to cause pagination; as written, this will only pull the first page of results from each table. assuming this thing isn't going to scale arbitarily, we could get away with continuing to fetch records and shove them into the cache until each table is exhausted
+  // NOTE: this was written under the assumption that there aren't enough rows in these tables to cause pagination; as written,
+  // this will only pull the first page of results from each table. assuming this thing isn't going to scale arbitarily, we 
+  // could get away with continuing to fetch records and shove them into the cache until each table is exhausted.
   baserowCache.interview = await fetchFromBaserow(`/database/rows/table/${interview}/?user_field_names=true`) 
   baserowCache.topic = await fetchFromBaserow(`/database/rows/table/${topic}/?user_field_names=true`) 
   baserowCache.excerpt = await fetchFromBaserow(`/database/rows/table/${excerpt}/?user_field_names=true`) 
@@ -74,8 +77,10 @@ const fetchEverythingFromBaserow = async () => {
 }
 
 const fetchFromBaserow = (apiPath) => {
-  // NOTE: forgive me, for I have sinned: a large language model wrote the initial version of this method. I modified it to refer to the global configuration object.
-  // in my opinion this is a clear illustration of the potential value of LLMs to coders - being able to gloss over details of a well-documented API, generating code which is not quite trivial but whose correctness can be assessed at a glance by an experienced developer
+  // NOTE: Forgive me, reader, for I have sinned: a large language model wrote the initial version of this method. I modified it
+  // to refer to the global configuration object. In my opinion this is a clear illustration of the potential value of LLMs to coders 
+  // - being able to gloss over details of a well-documented API, generating code which is not quite trivial but whose correctness can be 
+  // assessed at a glance by an experienced developer.
     return new Promise((resolve, reject) => {
         const xhr = new XMLHttpRequest();
         xhr.open("GET", globals.baserow.url + apiPath, true);
@@ -269,7 +274,7 @@ const highlightExcerpt = (index) => {
 
 const isNextExcerpt = (t) => t > window.interviewPositionMs;
 
-function highlightTranscript(status) {
+const highlightTranscript = (status) => {
   const { audio, excerpts } = window
   window.interviewPositionMs = audio.currentTime * 1000;
   const excerptTimestamps = excerpts.map(e => e.dataset.timeMs)
@@ -295,7 +300,6 @@ const logError = (error => console.error("Error", error.message));
 </head>
 <body>
   <div id="nav"></div>
-  <div id="interviews">
-  </div>
+  <div id="interviews"></div>
 </body>
 </html>
