--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ const renderExcerpt = (excerpt) => {
   <tr class="excerpt" data-id="${id}" data-time-ms="${timeMs}" data-interview-id="${interviewId}" onclick="onExcerptClick(event)">
     <td class="time">${timeReadable}</td>
     <td class="content">${content}</td>
-    <td class="meta"><div>${topics}</div><div class="resources-block">${resourceMarkup}</div></td>
+    <td class="meta"><div>${topics}</div><div class="resources-block" onclick="stopEventBubble(event)">${resourceMarkup}</div></td>
   </tr>
   `
   return excerptTemplate;
@@ -278,7 +278,8 @@ const highlightTranscript = (status) => {
 
 const scrollToActiveSection = () => document.querySelector(".excerpt.active")?.scrollIntoView({ behavior: "smooth" });
 
-const logError = (error => console.error("Error", error.message));
+const logError = (error) => console.error("Error", error.message);
+const stopEventBubble = (e) => e.stopPropagation();
 </script>
 </head>
 <body>
